--- a/DemoDatingApp/app/src/main/res/values/colors.xml
+++ b/DemoDatingApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#F04957</color>
+    <color name="colorPrimaryDark">#B21224</color>
+    <color name="colorAccent">#B21224</color>
 </resources>
