--- a/DemoDatingApp/app/src/main/res/layout/activity_main.xml
+++ b/DemoDatingApp/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,26 @@
         android:layout_height="match_parent">
 
 
-        <hu.kolos.karlovitz.demodatingapp.view.PersonDetailHeaderView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/person_detail_header"/>
+            android:orientation="vertical">
+
+            <hu.kolos.karlovitz.demodatingapp.view.PersonDetailHeaderView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/person_detail_header"/>
+
+            <ImageView
+                android:id="@+id/person_image"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:scaleType="centerCrop"
+                android:layout_marginTop="16dp" />
+
+        </LinearLayout>
+
+
     </ScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
