--- a/DemoDatingApp/app/src/main/res/values/themes.xml
+++ b/DemoDatingApp/app/src/main/res/values/themes.xml
@@ -13,4 +13,13 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Jingle.PersonDetail.Introduction.Body" parent="Widget.AppCompat.EditText">
+        <item name="android:lines">10</item>
+        <item name="android:inputType">textMultiLine</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:colorControlActivated">@color/colorPrimary</item>
+    </style>
 </resources>
